force-app/main/default/objects/Product_Edition__c/Product_Edition__c.object-meta.xml
<CustomObject>
    <description>Junction object between products and editions to allow users to sell products to specific events</description>
    <label>Product Edition</label>
    <nameField>
        <displayFormat>PE-{00000}</displayFormat>
        <label>Product Edition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Editions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>