force-app/main/default/objects/Product_Edition__c/fields/Product_Invoice_property__c.field-meta.xml
<CustomField>
    <fullName>Product_Invoice_property__c</fullName>
    <description>The field on a product-Edition level to influence the billing schedules on the order product.

&quot;Pay in Full”: then it’s one billing transaction with 100 % irrespective of payment schedule on Event edition/quote/oppty and with the &quot;Billing Target date&quot; = today ().

&quot;Pay as per Invoice Plan”: this is just paying as per event cut-off dates (overridden dates during oppty /quote)

&quot;Pay in Full as per the first invoice schedule&quot;: then it’s one billing transaction with 100 % with the &quot;Billing Target date&quot; of First Schedule cut-off date - number of days that customer has to pay (Net30).

&quot;Pay in Full as per the second invoice schedule”, then it’s one billing transaction with 100 % with the &quot;Billing Target date&quot; of second Schedule cut-off date - number of days that customer has to pay (Net30)</description>
    <label>Product Invoice property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice as per Invoice Plan</fullName>
            </value>
            <value>
                <fullName>Invoice in Full</fullName>
            </value>
            <value>
                <fullName>Invoice in Full as per the first invoice schedule</fullName>
            </value>
            <value>
                <fullName>Invoice in Full as per the second invoice schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>