force-app/main/default/objects/Product_Edition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Edition__c</columns>
    <columns>Product__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Edition__c</field>
        <operation>equals</operation>
        <value>Arab Health Exhibition and Congress 2019</value>
    </filters>
    <label>Arab Health Exhibition and Congress 2019</label>
</ListView>